Attribute Binding Challenge

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>IntroToVue</title>
     <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -15,7 +15,9 @@
       <div class="product">
 
         <div class="product-image">
-          <img src="">
+          <a :href="link">
+            <img :src="image">
+          </a>
         </div>
 
         <div class="product-info">
