--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
             <li v-for="detail in details">{{ detail }}</li>
           </ul>
 
-          <div class="dib mb4 center" v-for="variant in variants"  :key="variant.variantId">
-            <span @click="updateProduct(variant.variantImage)" :class="variant.variantColor" class="f6 ma2 grow no-underline br-pill ba bw1 ph3 pv2 mb2 dib">{{ variant.variantColor }}</span>
+          <div class="dib ma3 color-box br-pill grow" v-for="variant in variants"
+              :key="variant.variantId"
+              :style="{ backgroundColor: variant.variantColor }"
+              @mouseover="updateProduct(variant.variantImage)">
           </div>
           <br>
 
@@ -41,8 +43,13 @@
           </div>
           <br>
 
-          <button class="ma4" v-on:click="addToCart">Add to Cart</button>
-          <button class="ma4" :disabled="cart <= 0" v-on:click="removeFromCart">Remove</button>
+          <button class="ma4" v-on:click="addToCart"
+              :disabled="!inStock"
+              :class="{ disabledButton: !inStock }">Add to Cart</button>
+          <button class="ma4"
+              :disabled="cart <= 0"
+              v-on:click="removeFromCart"
+              :class="{ disabledButton: cart <= 0 }">Remove</button>
 
           <div class="cart ma3">
             <p>Cart ({{ cart }})</p>
