--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
     <div id="app">
       <div class="product">
         <div class="product-image">
-          <a :href="link">
+          <a :href="imageLink">
             <img :src="image">
           </a>
         </div>
 
         <div class="product-info">
-          <h1>{{ product }}</h1>
-          <p v-if="inventory >= 10"> In Stock </p>
-          <p v-else-if="inventory < 10 && inventory > 0"> Almost Out! Only {{ inventory }} items left! </p>
+          <h1>{{ title }}</h1>
+          <p v-if="inStock >= 10"> In Stock </p>
+          <p v-else-if="inStock < 10 && inStock > 0"> Almost Out! Only {{ inStock }} items left! </p>
           <p v-else> Out of Stock </p>
-          <span v-show="onSale"> On Sale!</span>
+          <span v-show="onSale">{{ saleTitle }}</span>
 
           <ul>
             <li v-for="detail in details">{{ detail }}</li>
           </ul>
 
-          <div class="dib ma3 color-box br-pill grow" v-for="variant in variants"
+          <div class="dib ma3 color-box br-pill grow" v-for="(variant, index) in variants"
               :key="variant.variantId"
               :style="{ backgroundColor: variant.variantColor }"
-              @mouseover="updateProduct(variant.variantImage)">
+              @click="updateProduct(index)">
           </div>
           <br>
 
